# portico

./: Cargo.toml  LICENSE  README.md  README_CN.md
.trae/documents/: portico_implementation_plan.md
examples/: config.yaml
src/: cli.rs  config.rs  main.rs  monitor.rs  ssh.rs  tui.rs
