[package]
name = "portico"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ssh2 = "0.9"
sysinfo = "0.29"
tokio = { version = "1.35", features = ["full"] }
ratatui = "0.26"
crossterm = "0.28"
